--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,10 @@
-{
-  "hosting": {
-    "public": ".",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+"rewrites": [
+  {
+    "source": "**",
+    "destination": "/index.html"
+  },
+  {
+    "source": "!**/*.{html,js,css,png,jpg,gif}",
+    "destination": "/index.html"
   }
-}
+]
