--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.html",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js",         
+    "start:prod": "node server.js", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
