--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "car-race",
   "version": "1.0.0",
   "main": "index.html",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",         
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
